--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "type": "module",
   "devDependencies": {
     "@ffflorian/jszip-cli": "^3.1.6",
+    "sass": "^1.51.0",
     "vite": "^2.9.6"
   },
   "scripts": {
     "dev": "vite --host --open",
-    "prebuild": "vite build",
+    "prebuild": "sass src/scss:assets/css && vite build",
     "build": "pnpx jszip-cli -c .jsziprc.json",
     "xdc": "pnpx jszip-cli -c .jsziprc.json",
+    "css": "sass --watch src/scss:dist/css",
     "preview": "vite preview"
   },
   "repository": {
