--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bsehovac.github.io",
+  "name": "the_cube",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Rubik's Cube Game for Delta Chat",
   "main": "",
   "type": "module",
   "devDependencies": {
