--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "private": true,
-  "packageManager": "pnpm@6.32.3",
+  "type": "module",
   "scripts": {
-    "dev": "vite --host --open",
-    "prebuild": "vite build && sass src/scss:assets/css",
-    "build": "jszip-cli -c jszip.config.json",
-    "css": "sass --watch src/scss:assets/css",
-    "preview": "vite preview"
+    "start": "vite --port 3000",
+    "fix": "prettier --write .",
+    "check": "prettier --check .",
+    "build": "vite build"
   },
   "devDependencies": {
-    "@ffflorian/jszip-cli": "^3.1.6",
-    "sass": "^1.51.0",
-    "vite": "^2.9.9"
+    "@webxdc/vite-plugins": "latest",
+    "prettier": "latest",
+    "sass": "^1.82.0",
+    "vite": "latest"
   }
 }
